--- a/src/TinderCards.css
+++ b/src/TinderCards.css
@@ -13,7 +13,7 @@
 .card > h3 {
   position: absolute;
   bottom: 10px;
-  color: gray;
+  color: white;
 }
 .tinderCards__cardContainer {
   display: flex;
